added deploy script

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,6 @@
-baseURL = "https://blog.pddev.xyz/"
+baseURL = "https://pddev.ca/"
+relativeURLs = true
+uglyURLs = true
 languageCode = "en-us"
 title = "Phuc Duong's Blog"
 theme = "bilberry-hugo-theme"
@@ -12,8 +14,8 @@ enableRobotsTXT = true
 
   # Description and meta data for the search engines
   author = "Phuc Duong"
-  description = "Curated wisdom from others."
-  keywords = "blog,personal,posts,golang"
+  description = "Developer and accessibility enthusiast"
+  keywords = "blog,personal,posts,golang,accessibility"
   
   # How many articles should be displayed at once?
   paginate = 10
@@ -30,7 +32,7 @@ enableRobotsTXT = true
 
     # Header configuration
     # your subtitle if you want to use any
-    subtitle = "Curated wisdom from others."
+    subtitle = "Developer and accessibility enthusiast."
 
     # if you want to use gravatar for the header image
     gravatarEMail = "phuc.duongdinh@gmail.com"
